5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4125/executions/1836_2603.log
== TEST (2019-06-30 19:31:42) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("digite x: ")))
vetor = shape(x)[0,1]
for i in range(4):
	vetor = sorted(x, reverse = true)
	print(vetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 19:32:05) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("digite x: ")))
vetor = shape(x)[0,1]
vetor = sorted(x, reverse = true)
print(vetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 19:33:34) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("digite x: ")))
vetor = sorted(x, reverse = true)
print(vetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 19:33:57) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("digite x: ")))
x = sorted(x, reverse=true)
print(vetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 19:34:08) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("digite x: ")))
x = sorted(x, reverse=True)
print(vetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 19:34:36) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("digite x: ")))
v = x
v = sorted(v, reverse=True)
print(vetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 19:46:52) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("digite x: ")))
for i in range(4):
	vetor = sorted(x, reverse=True)[1]
	x[:,j] = vetor[i,j]
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 19:47:39) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("digite x: ")))
for i in range(4):
	vetor = (x, reverse=True)[1].sorted()
	x[:,j] = vetor[i,j]
print(x)
-- ERROR:
File "XXXX", line 5
    vetor = (x, reverse=True)[1].sorted()
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 19:51:12) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("digite x: "))) 
for i in range(4):
	vetor[i] = x[i,i]
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 19:52:12) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("digite x: "))) 
vetor = zeros(4, dtype = int)
for i in range(4):
	vetor[i] = x[:,i]
print(vetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 19:54:09) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("digite x: "))) 
vetor = zeros(4, dtype = int)
for i in range(4):
	vetor[i] = x[i,:]
print(vetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 19:56:09) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("digite x: "))) 
for i in range(4):
	x[:,i] = sorted(x[:,i], reverse=True)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-30 19:56:54) 
-- CODE:
from numpy import*
from numpy.linalg import*
x = array(eval(input("digite x: "))) 
for i in range(4):
	x[:,i] = sorted(x[:,i], reverse=True)
print(x)
-- EXECUTION TIME:
1.14415
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
[[4 4 4 4]
 [3 3 3 3]
 [2 2 2 2]
 [1 1 1 1]]
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
[[4 4 4 3]
 [3 3 3 3]
 [2 2 2 3]
 [1 1 1 3]]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
